--- a/css/main.css
+++ b/css/main.css
@@ -393,5 +393,5 @@ font-weight: 500;
 .footer .container .copyright{
     font-size: 15px;
     font-weight: 300;
-    line-height: 20px;
+    line-height: 1.3;
 }
