--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,6 @@
      margin: 0 auto;
      padding: 5px 0 0 0;
      width: 1200px;
-
      justify-content: space-between;
  }
 
@@ -171,6 +170,10 @@
 
  .inner .text .content p {
      padding: 0 0 0 15px;
+ }
+
+ .product_slide i::before{
+    vertical-align: middle;
  }
 
  .product_slide .slick-arrow {
